institucional aquatech finalizado

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AquaTech</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/favicon2.ico" type="image/x-icon">
 </head>
+
 <body>
-    
+
     <div class="header">
         <div class="container">
             <h1 class="titulo">AquaTech</h1>
@@ -21,5 +24,45 @@
         </div>
     </div>
 
+    <div class="banner">
+        <div class="container">
+            <span class="banner-title">Preservando <b>hoje</b> para existirem <b>amanhã.</b></span>
+        </div>
+    </div>
+
+    <div class="cards">
+        <div class="card">
+            <img src="imagens/planet-earth_color.png" alt="">
+            <h2>Missão</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quasi inventore
+                maiores saepe. Distinctio eaque architecto minima autem qui quaerat dignissimos
+                delectus, fuga animi alias in modi, totam fugit voluptates!
+            </p>
+
+        </div>
+        <div class="card">
+            <img src="imagens/lightbulb_color.png" alt="">
+            <h2>Visão</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ut excepturi laborum fugiat ea expedita
+                nostrum cum saepe? Sed eius delectus dolores reiciendis nesciunt beatae, consequuntur quaerat maxime
+                similique enim?
+            </p>
+        </div>
+        <div class="card">
+            <img src="imagens/growth_color.png" alt="">
+            <h2>Valores</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam cumque eos natus labore suscipit optio
+                omnis praesentium nam reprehenderit vel? Illo, officia quia? Magnam necessitatibus sapiente rem illo est
+                officiis?</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Feito com amor por um aluno SPTECH ❤️​ &copy</p> 
+        <p>2024</p>
+    </div>
+
 </body>
+
 </html>
